# fastapi-generic-permissions

./: LICENSE  README.md  example.py  pyproject.toml  tox.ini
fastapi_generic_permissions/: __init__.py
tests/: test_permission.py
