[tool.poetry]
name = "fastapi-generic-permissions"
version = "0.1.0"
description = "Generic permission handling for FastAPI"
authors = ["SALT Astronomy Operations"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
black = "^21.6b0"
mypy = "^0.902"
bandit = "^1.7.0"
isort = "^5.9.1"
flake8 = "^3.9.2"
flake8-print = "^4.0.0"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
